--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@font-face { font-family: Retro; src: url( 'res/visitor2.ttf'); }
+
 html, body
 {
   -webkit-user-select:none;
@@ -5,6 +7,7 @@ html, body
   cursor: default;
   margin: 0px;
   overflow: hidden;
+  font-family: Retro;  
 }
 
 canvas
@@ -35,6 +38,46 @@ canvas
 {
   from {opacity: 0.0;}
   to {opacity: 1.0;}
+}
+
+#header
+{
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 25px;
+  top: 0px;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #aaa;
+  font-size: 26px;
+  text-align: center;
+  line-height: 100%; 
+}
+
+#footer
+{
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 25px;
+  bottom: 0px;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #aaa;
+  font-size: 26px;
+  text-align: center;
+  line-height: 100%; 
+}
+
+#fullscreen
+{
+    background-color:#F0F0F0;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    position: absolute;
 }
 
 div.Fade
