--- a/style.css
+++ b/style.css
@@ -48,11 +48,12 @@ canvas
   height: 25px;
   top: 0px;
   padding: 5px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(25, 25, 25, 0.9);
   color: #aaa;
   font-size: 26px;
   text-align: center;
   line-height: 100%; 
+  z-index: 2;
 }
 
 #footer
@@ -63,11 +64,12 @@ canvas
   height: 25px;
   bottom: 0px;
   padding: 5px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(25, 25, 25, 0.9);
   color: #aaa;
   font-size: 26px;
   text-align: center;
   line-height: 100%; 
+  z-index: 2;
 }
 
 #fullscreen
@@ -78,6 +80,36 @@ canvas
     left: 0px;
     top: 0px;
     position: absolute;
+    z-index: 3;
+}
+
+#ending
+{
+    background-color:#F0F0F0;
+
+  -webkit-box-shadow: rgb(255, 243, 195) 0px 0px 200px 50px inset;
+  background-color: rgb(255, 253, 242);
+  box-shadow: rgb(255, 243, 195) 0px 0px 200px 50px inset;
+  display: block;
+
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    position: absolute;
+    font-size: 90px;
+    text-align: center;
+    vertical-align: center;
+    margin: 0px;
+    opacity: 0;
+}
+
+#text
+{
+  margin-left: 10%;
+  margin-top: 10%;
+  margin-right: 10%;
+  opacity: .9;
 }
 
 div.Fade
