--- a/style.css
+++ b/style.css
@@ -113,13 +113,14 @@ canvas
 {
     background-color: rgba(0, 0, 0, 0);
     width: 100%;
-    height: 100%;
+    height: 200px;
     left: 0px;
     top: 0px;
     position: absolute;  
     font-size: 120px;
     text-align: center;
-    vertical-align: middle;  
+    vertical-align: middle; 
+    display: block; 
     margin-top: 10%;
     color: rgba(41, 36, 33, 0.8);
     opacity: 0;
