--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body
   cursor: default;
   margin: 0px;
   overflow: hidden;
-  font-family: Retro;  
+  font-family: Retro;
 }
 
 canvas
@@ -45,15 +45,23 @@ canvas
   position: absolute;
   display: block;
   width: 100%;
-  height: 25px;
+  height: 50px;
   top: 0px;
-  padding: 5px;
+  padding: 10px;
+  box-sizing: border-box;
   background-color: rgba(25, 25, 25, 0.9);
   color: #aaa;
   font-size: 26px;
   text-align: center;
-  line-height: 100%; 
+  line-height: 100%;
   z-index: 2;
+}
+
+#gamemix
+{
+  position: absolute;
+  right: 0px;
+  top: 0px;
 }
 
 #footer
@@ -68,7 +76,7 @@ canvas
   color: #aaa;
   font-size: 26px;
   text-align: center;
-  line-height: 100%; 
+  line-height: 100%;
   z-index: 2;
 }
 
@@ -102,7 +110,7 @@ canvas
 {
     font-size: 90px;
     text-align: center;
-    vertical-align: center;  
+    vertical-align: center;
   margin-left: 10%;
   margin-top: 10%;
   margin-right: 10%;
@@ -116,11 +124,11 @@ canvas
     height: 200px;
     left: 0px;
     top: 0px;
-    position: absolute;  
+    position: absolute;
     font-size: 120px;
     text-align: center;
-    vertical-align: middle; 
-    display: block; 
+    vertical-align: middle;
+    display: block;
     margin-top: 10%;
     color: rgba(41, 36, 33, 0.8);
     opacity: 0;
